Search dark mode fix #5

--- a/resources/components/darkmode.less
+++ b/resources/components/darkmode.less
@@ -90,9 +90,13 @@
         background: @dark-bg-50  !important;
     }
 
-    #site-search #p-search #searchInput,
     #mw-header-menu-drawer-container #mw-user-links #p-personal {
         border-color: @dark-bg-50;
+    }
+
+    #site-search #p-search #searchInput {
+        background: @dark-bg-50;
+        border-color: @dark-bg-60;
     }
 
     .suggestions .suggestions-special {
@@ -132,12 +136,12 @@
     .suggestions a.mw-searchSuggest-link:focus,
     .suggestions-result,
     .suggestions-special .special-query {
-        color: @dark-text-90 !important;
+        color: @dark-text-90  !important;
     }
 
     .suggestions-result-current {
         background: #2a4b8d !important;
-        color: @dark-text-100 !important;
+        color: @dark-text-100  !important;
     }
 
     .mw-body-content #contentSub,
